# date-website

./: .dockerignore  .editorconfig  .env.example  .env.on  .env.prod.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE-NOTICE.md  README.md  docker-compose.dev-all.yml  docker-compose.monitoring.yml  docker-compose.multi-assoc.yml  docker-compose.prod.yml  docker-compose.yml  env.sh  example.env  initialdata.json  jwt_demo.py  manage.py  master.example.env  mypy.ini  nginx.conf  pyproject.toml  requirements.in  requirements.txt  update-postgres.sh  web.dev.sh  web.prod.sh
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  release.yml
ads/: admin.py  models.py  urls.py  views.py
alumni/: admin.py  apps.py  config.py  forms.py  gsuite_adapter.py  models.py  tasks.py  tests.py  urls.py  views.py
archive/: admin.py  cloudflare.py  fields.py  filters.py  forms.py  mass_upload.py  models.py  s3_populate_db.py  s3_upload.py  tables.py  tasks.py  tests.py  uploads.py  urls.py  views.py
attendance/: admin.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py  websocket.py
backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.sh  requirements.txt  schema.yml  wait-for-postgres.sh
billing/: admin.py  context_processors.py  handlers.py  models.py  tests.py  util.py
blog/: admin.py  models.py  tests.py  urls.py  views.py
blog_module/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
blog_tutorial/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
booking/: admin.py  forms.py  models.py  urls.py  views.py
core/: .env  .gitignore  admin.py  admin_base.py  admin_ui.py  admin_widgets.py  cache_keys.py  celery.py  context_processors.py  dashboard.py  fields.py  functions.py  modeltranslation.py  redaction.py  routing.py  settings.py  storage_backends.py  translation_compiler.py  urls.py  utils.py  views.py  wsgi.py
ctf/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
date/: admin.py  apps.py  functions.py  language_utils.py  middleware.py  settings.py  tests.py  tests_wordpress_import.py  urls.py  views.py  wsgi.py
date_custom/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
docs/: CNAME  api-contract.md  architecture.md  association-config-schema.md  association-qa-playbook.md  demo-bootstrap-data.md  docker-dev-workflow.md  frontend-maintainability-final-pass-plan.md  frontend-style-architecture-refactor-plan.md  index.md  legacy-events-template-overrides.md  migration-runbook.md  multi-host-qa-report.md  playwright-element-compare.md  route-migration-matrix.md  testing-strategy.md  theming-multi-association.md
event_calendar/: apps.py  utils.py  views.py
events/: admin.py  apps.py  consumers.py  feed.py  forms.py  models.py  registration.py  routing.py  signals.py  tasks.py  tests.py  translation.py  urls.py  utils.py  views.py  websocket_utils.py  widgets.py
exambank/: admin.py  apps.py  archive_urls.py  filters.py  forms.py  models.py  tables.py  tests.py  urls.py  views.py
expenses/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
fixtures/: ads.json  archive.json  ctf.json  events.json  members.json  news.json  polls.json  publications.json  social.json  staticpages.json
formal_events/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.mjs  lint_output.txt  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts
functionaries/: admin.py  apps.py  forms.py  models.py  selectors.py  tests.py  translation.py  views.py
gallery/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
harassment/: admin.py  apps.py  forms.py  models.py  views.py
homepage/: apps.py  functions.py  tests.py  views.py
instagram/: admin.py  apps.py  igupdate.py  models.py
jwt_auth/: README_TASKS.md  admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
k8s/: date-website.yaml
lucia/: admin.py  apps.py  models.py  urls.py  views.py
members/: admin.py  apps.py  auth_urls.py  backends.py  constants.py  forms.py  functionary.py  key_management.py  managers.py  middleware.py  models.py  oauth.py  signals.py  tests.py  tokens.py  translation.py  two_factor.py  two_factor_urls.py  urls.py  views.py  views_github.py
monitoring/: .env.example  docker-compose.yml
news/: admin.py  feed.py  forms.py  models.py  tests.py  translation.py  urls.py  views.py
polls/: admin.py  models.py  tests.py  translation.py  validation.py  views.py  vote.py
publications/: admin.py  apps.py  fields.py  models.py  tests.py  urls.py  views.py
scripts/: association_qa.py  backup_postgres.sh  bulk_send_confirmation.py  check_project_variants.py  clean_init.sh  create_album.py  css_contract_diff.py  export_ctf_guesses.py  export_subscription_status.py  generate_dynamic_fixtures.py  import_alumni.py  install_shell_aliases.sh  (+12 more)
(+1246 files in other folders)
